--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,36 +8,46 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
+    display:flex;
+    flex-wrap:wrap;
+    justify-content:space-between;
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
+    
+    
 }
 
-.header h1 {
-    display: inline-block;
-    font-size: 48px;
+header h1 {
+    display: flex;
+    position:sticky; 
+    font-size: 3em;
+    
 }
 
-.header h1 .seo {
+header h1 span {
     color: #d9dcd6;
 }
 
-.header div {
+header nav {
+    display:flex;
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    
 }
 
-.header div ul {
+header nav ul {
+    display: flex;
     list-style-type: none;
 }
 
-.header div ul li {
-    display: inline-block;
+header nav ul li {
+    display: flex;
     margin-left: 25px;
 }
 
@@ -47,7 +57,7 @@ a {
 }
 
 p {
-    font-size: 16px;
+    font-size: 1em;
 }
 
 .hero {
@@ -57,6 +67,21 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+}
+
+.description {
+    position: relative;
+    height: 800px;
+    width: 100%;
+    top: 0;
+    left: 0;
+    font-size: 0;
+}
+
+#digital-marketing {
+    min-height: 700px;
+    min-width: 100%;
+    visibility: hidden;
 }
 
 .float-left {
@@ -69,13 +94,13 @@ p {
     margin-left: 25px;
 }
 
-.content {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-.benefits {
+aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
@@ -86,55 +111,23 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+aside section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+aside section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+aside section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.search-engine-optimization {
+article {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -143,58 +136,33 @@ p {
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
+main article img {
     max-height: 200px;
 }
 
-.online-reputation-management img {
-    max-height: 200px;
+#online-reputation-management img {
+    float: right;
+    margin-left: 25px;
 }
 
-.social-media-marketing img {
-    max-height: 200px;
+#social-media-marketing img, #search-engine-optimization img {
+    float: left;
+    margin-right: 25px;
 }
 
-.search-engine-optimization h2 {
+article h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
 
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
-    font-size: 20px;
+footer h2 {
+    font-size: 1.25em;
 }
